<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_msg_saver</name>
  <version>1.0.0</version>
  <description>The pointcloud_msg_saver package</description>

  <maintainer email="yuhang.han@u.nus.edu">Yuhang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

</package>
